# billard

./: AID.md  BOOKS_README.md  Dockerfile  README.md  client.py  pyproject.toml  server.py  uploader.py
.github/workflows/: docker-image.yml
articles/: bye_11-3.json  hello_10-3.json  test.json  untitled_10-3.json
books/: books.json  prof-fav.json
templates/: article.html  book.html  books.html  contact.html  home.html  work.html
